[gd_scene load_steps=17 format=2]

[ext_resource path="res://recursos/modelos/hud/Kenney Pixel Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/Menus/MenuDePausa.gd" type="Script" id=2]
[ext_resource path="res://recursos/modelos/RecursosPresentacion/Revamped.otf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.392157, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.803922, 0.596078, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.356863, 0.356863, 0.356863, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00784314, 0.635294, 0.447059, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=4]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0.509804, 0.596078, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.192157, 0.192157, 0.192157, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.301961, 0.898039, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.4, 0.4, 0.4, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0.328018, 0.384314, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=8]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.847059, 0, 0.619608, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.211765, 0.211765, 0.211765, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 0.564706, 0.878431, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.509804, 0, 0.372549, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="DynamicFont" id=13]
size = 26
font_data = ExtResource( 1 )

[node name="MenuDePausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.164706, 0.168627, 0.87451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.501961, 0, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -356.5
margin_top = -146.0
margin_right = 356.5
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -87.0
margin_right = 420.0
margin_bottom = 87.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContinuar" type="Button" parent="Panel/HBoxContainer"]
margin_right = 386.0
margin_bottom = 174.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -86.0
margin_right = -53.0
margin_bottom = 87.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenuPrincipal" type="Button" parent="Panel/VBoxContainer"]
margin_right = 237.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 8 )
text = "Menu Principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 84.0
margin_right = 237.0
margin_bottom = 88.0
custom_styles/separator = SubResource( 9 )

[node name="ButtonSalir" type="Button" parent="Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 237.0
margin_bottom = 173.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 13 )
text = "Salir "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/HBoxContainer/ButtonContinuar" to="." method="_on_ButtonContinuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonMenuPrincipal" to="." method="_on_ButtonMenuPrincipal_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonSalir" to="." method="_on_ButtonSalir_pressed"]
